@@ -1,6 +1,7 @@
 08/27/2015
   -Added ParsePacket to LGXTag which GetTagList uses
   -Read now returns LGXTag type
+  -Write no longer requres providing data type
 
 08/26/2015
   -Added LINT read support
